kustomize/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`argo.jindrich-jakubicka.cz`)
    priority: 10
    services:
    - name: argo-cd-argocd-server
      port: 80
  - kind: Rule
    match: Host(`argo.jindrich-jakubicka.cz`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argo-cd-argocd-server
      port: 80
      scheme: h2c
